<resources>
    <string name="app_name">Travel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="InOut_1_T">自2023年8月15日起：</string>
    <string name="InOut_1_1">如有疑似COVID-19症狀或快篩陽性，請進行「0+n自主健康管理」，避免非必要外出，外出時請全程佩戴口罩，直至快篩陰性或滿5天即可解除。</string>
    <string name="InOut_1_2">具重症風險因子者請儘速就醫。</string>

    <string name="InOut_2_2">入境限期（簽證上VALID UNTIL或ENTER BEFORE欄）：係指簽證持有人使用該簽證之期限，例如VALID UNTIL（或ENTER BEFORE）APRIL 8, 1999即1999年4月8日後該簽證即失效，不得繼續使用。</string>
    <string name="InOut_2_3">停留期限（DURATION OF STAY）：指簽證持有人使用該簽證後，自入境之翌日（次日）零時起算，可在臺停留之期限。</string>
    <string name="InOut_2_3_1">停留期一般有14天，30天，60天，90天等種類。持停留期限60天以上未加註限制之簽證者倘須延長在臺停留期限，須於停留期限屆滿前，檢具有關文件向停留地之內政部移民署服務站申請延期。</string>
    <string name="InOut_2_3_2">居留簽證不加停留期限：應於入境次日起15日內或在臺申獲改發居留簽證簽發日起15日內，向居留地所屬之內政部移民署各縣市服務站申請外僑居留證（ALIEN RESIDENT CERTIFICATE）及重入國許可（RE-ENTRY PERMIT） ，居留期限則依所持外僑居留證所載效期。</string>
    <string name="InOut_2_4">入境次數（ENTRIES）：分為單次（SINGLE）及多次（MULTIPLE）兩種。</string>
    <string name="InOut_2_5">簽證號碼（VISA NUMBER）：旅客於入境應於入國登記表填寫本欄號碼。</string>
    <string name="InOut_2_6">註記：係指簽證申請人申請來臺事由或身分之代碼，持證人應從事與許可目的相符之活動。</string>

    <string name="InOut_3">中華民國政府有外交部、經濟部、教育部、僑委會、交通部觀光署等在國外設有駐外單位，辦理該單位所負責之工作。不過各單位都由外交部之當地駐外單位統一指揮、協調，大部分也在同一地點工作。</string>

    <string name="Internationality_1">臺灣目前有桃園國際機場、高雄國際航空站、臺中國際機場及臺北松山機場四座國際機場，和全球主要國家都有班機直航，國際航空交通相當便捷。除此之外，臺灣多處國內機場已開放飛航國際包機業務，相關資訊請至各航空站網站查詢。</string>

    <string name="domestic_1">臺灣國內航線相當發達，各主要城市間往返班機頻繁，搭乘飛機已與搭乘長途客運巴士一般普及，尤其在例假日更是經常客滿。因此，搭乘前請務必先向航空公司預訂機位。同時各大旅行社亦受理代訂機位及購票事宜。\n\n前往機場報到時，請務必攜帶身份證明文件（國人出示身份證；外籍人士出示護照）以辦理登機手續。</string>

    <string name="view1_content">\t\t淡水，是一個充滿歷史的小鎮。位處臺北盆地淡水河系出口，扼守北臺灣大門，西元1858年開港通商，是臺灣北部最早開發的港口，境內除淡水河口狹小平原外，泰半為大屯山陵所被覆。今日的淡水區，舊名「滬尾」，而「淡水」則是一個總稱，泛指淡水河流域一帶，甚至是整個北臺灣。關於「滬尾」這個名稱的緣由，有兩種說法：一說是原居於此的凱達格蘭族語之音譯；一說認為淡水從前有許多捕魚的石滬，在石滬尾端的村莊自然就叫「滬尾」了。而隨著港口的日漸發展，「淡水」的名稱也逐漸取代了「滬尾」。\n
商旅船舶的熱絡景象雖已不在，但走在淡水街道上，一座座洋式、閩式、日式的舊建築，彷彿都在訴說著小鎮的悠悠往事—從西元1629年西班牙人進佔、西元1642年荷蘭人入侵，歷經清政府的統治，以及日治時代的歷史舊事。拜訪淡水，徒步悠遊是不錯的賞玩方式，中正路、真理街、重建街、三民街、清水街一帶，最能展現老街古風及各時期建築特色。遊客可搭乘往返淡水、八里及淡水、大稻埕間的渡輪，淡水河風情，盡收眼底。\n
一般所說的淡水老街，泛指中正路一帶（從渡船碼頭附近到與中山路交會口路段），含其周圍鄰接之三民街、重建街等。老街上零星可見一些局部保留舊建築趣味的屋舍，加上古董藝品店林立，更顯其古樸風味。沿街可欣賞精雕細琢的石藝、木雕作品，店家細心收藏多年的古董文物，飄逸優雅的詩詞字畫，以及各色裝飾藝品。
看河、觀山、坐船，古老的遊趣一直延伸到現在，因有淡水河、渡船頭、漁人碼頭等景點，加上捷運的便利，讓淡水老街的魅力無人能擋。</string>

    <string name="view2_content">\t\t士林夜市為臺北市最具規模的夜市之一，以陽明戲院及慈誠宮為中心，包含了文林路、大東路、大南路等熱鬧街市集結而成，其中士林市場早在西元1910年即已興建，以各種傳統小吃聞名國內外，許多觀光客皆慕名而來，像是大餅包小餅、石頭火鍋或是士林大香腸等，更是已經成為美食地標，無人不曉。
由於夜市鄰近許多學區，故以學生為主要的消費族群，價格也比一般商店便宜許多，例如家具、衣飾、相片沖印店或寵物用品等，都有其集散的區域，『情人巷』中的精品店與冰店，更是吸引了不少當地學子以外的顧客前往。
士林夜市所含範圍極廣，在曲折巷弄內行走，常有柳暗花明又一村的驚喜，週末假日時前往，更是人山人海，擠得水洩不通，常見一家大小提著大包小包剛採買的日用品，嘴裡還塞著美味小吃，滿足之情溢於言表。</string>

    <string name="view3_content">\t\t九份隸屬新北市瑞芳區，九份在金礦業興盛前，以採樟煮腦為業。此處計有九十口樟腦灶，\而十口灶為一份，故共有九份，久而久之演變為九份地名。九份之發展過程可謂一段先民採金史，隨採金人潮的湧入而繁華，又隨採金事業的沒落而褪色。約略西元1890年左右，居民在福山宮土地祠距小金瓜不遠處掘到金脈，村落頓時聚集了三、四千戶的淘金人口，此為九份的第一次繁華。日治時代，大量的黃金被輸往日本，致使九份產金量達到顛峰。三○年代，隨著金價上漲締造了「亞洲金都」繁華絢麗的輝煌盛況，當時由海上遙望九份聚落，燈火燦爛，時人稱之為「小上海」、「小香港」。\n\n
        \t\t二戰後，金礦因前期的開採殆盡，產量大幅下滑，終在缺乏開採價值與經營不善之下而結束，採金事業也因此走入歷史滄桑中。曾幾何時，隨著電影「悲情城市」一片在威尼斯影展中造成轟動之後，這個沒落數十載的小城，又三度勾起了人們的注視與回憶。昔日繁華的老街、廢棄的礦坑、自成一格的礦區風光與淘金史，經由媒體的一再傳播，吸引了四方尋找靈感的藝術家尋蹤到此，嚮往復古的遊客也大量前來緬懷思古、細細品味這悲情城市中的有情天地。</string>

    <string name="view4_content">\t\t「野柳」為大屯山餘脈伸出海中的岬角，從金山遠眺，猶如潛入海中的巨龜，故又名為「野柳龜」。其因波浪侵蝕、岩石風化及地殼運動等作用，造就了海蝕洞溝、燭狀石、蕈狀岩、豆腐岩、蜂窩岩、壺穴、溶蝕盤等各種奇特景觀。女王頭、仙女鞋、燭臺石等，更是聞名國際的海蝕奇觀。區內的林添禎塑像是紀念其當年捨身救人的英勇事蹟。
燭臺石的「燭火」其實是岩層裡堅硬的球形結核，因較能抵抗海蝕，而露出錐形頂部，海水沿其邊緣迴流激盪，產生環狀溝槽，由於結核外圍有一帶堅硬的環圈，海水便順此環圈向下侵蝕、切割，形成圓錐狀外形，真可謂鬼斧神工之佳作。所以「野柳」不但是臺灣著名的觀光遊憩據點，更是一處地質地形景觀豐富的教室，值得我們細究觀賞，相信在您觀賞之後，不得不讚嘆大自然之偉大神奇了！</string>

    <string name="view5_content">\t\t旗津舊名旗後，為一個狹長形的島，往旗津有兩種選擇，一是搭乘渡船，一是驅車穿過過港隧道。旗津雖小，卻有多樣吸引人的去處，在廟前路的天后宮，有三百年歷史；旗津老街上，綿延清一色海產店，價廉味美的新鮮海產，露天下大快朵頤，十分暢快。
旗後砲台:\n旗後砲台最大的特色在於中式的營區建築，八字門八字牆、門楣上的「威震天南」，牆上磚砌相對的囍字，角落搭配蝙蝠刻紋，壁面、階梯面的許多傳統建築花樣，都值得令人細細品味。
旗後燈塔:\n旗後燈塔底層為文藝復興後期的巴洛克建築，主體後方則是八角形磚塔。塔區的視野景觀優良，可俯瞰整個高雄港灣美景。
旗津天后宮:\n旗津天后宮主要供奉媽祖，當地民眾又稱為媽祖廟或媽祖宮，廟內全年香火鼎盛，因是高雄市第一座媽祖廟，於民國68年（西元1979年）經政府核定為古蹟。
旗津海產街:\n旗津四面環海，漁獲豐富，造就了專賣海產的店家，除了旗津渡輪站前的廟前街海鮮店、海水浴場前的海產攤生意興隆外，開車從旗津路到過港隧道沿途，隔幾步路就有海鮮店老闆向您招手吆喝進店消費。
旗津海岸公園:\n高雄市政府為了因應旗津特有的地理特質所規劃開發，其設計以觀賞海洋水文景觀為主，並設置步道貫穿整個公園，依序規劃為海水浴場、觀海景觀步道、越野區、自然生態等四種不同型態設計，展現多元的觀光遊憩功能。
旗津海岸公園遊客服務中心貝殼館:\n遊客服務中心建築採白色、灰藍、淺藍三色系搭配，與海空顏色自然協調。二樓是東南亞最大的貝殼館，由高雄市民黃葛亮捐獻多年珍藏，近2,000種臺灣常見的貝殼鉅細靡遺的羅列在陳列箱中，收藏規模堪稱國內最大，整座貝殼館讓人大開眼界。</string>

    <string name="view6_content">\t\t陽明山國家公園緊臨臺北都會區，全區以大屯火山群彙為主，面積約11,338公頃，由內政部國家公園署陽明山國家公園管理處管理，因火山活動造成的錐狀與鐘狀火山體、火口湖、硫氣孔、地熱與溫泉，具有研究及娛樂價值，受季風影響，植物相兼具高草原、矮草原、闊葉樹林、亞熱帶雨林與水生植物群落，孕育臺灣水韭、大屯杜鵑、蝴蝶與鳥類，陽明山公園栽植的櫻花及杜鵑，使本區成為臺北近郊最吸引人的賞花場所。
陽明山國家公園因受緯度及海拔之影響，氣候分屬亞熱帶氣候區與溫帶氣候區。春季二、三月是陽明公園傳統的花季，色彩繽紛的各種杜鵑與滿山遍野的緋寒櫻，吸引大批賞花人潮，讓陽明山的初春更顯生氣蓬勃。夏季景色則因西南季風的吹拂、午後雷陣雨的影響，霧雨初晴時，常可在山區覓得「虹橋跨立山谷」的景緻。而當秋天來時，芒草展現隨風搖曳的花海；楓紅點綴枝頭，樹葉片片金黃，交織成一幅盛名遠播的「大屯秋色」；冬季的陽明山則因受東北季風影響，山區經常寒風細雨，低溫高濕，雲霧瀰漫。若遇強烈寒流來襲，七星山、竹子山、大屯山一帶偶可見白雪紛飛，成為瑞雪覆蓋的銀白世界。
此外，以大屯火山群為主體的陽明山國家公園，是臺灣主要的火山分佈區，地質構造多屬安山岩；外型特殊的錐狀或鐘狀火山體及火山口、火口湖，構成本區獨特的地質地形景觀。區內的大、小油坑、馬槽、大磺嘴等地，都可見到強烈的噴氣孔活動；而分佈於園區內的多處溫泉區，更早已遠近馳名。</string>

    <string name="view7_content">\t\t烏來是臺灣北部著名的山地鄉，位於水源保護區，居民以泰雅族居多，南勢溪和桶後溪交流處，此處兩側山峰高聳，溪流蜿蜒而過，形成峻秀的山水奇景，以溫泉、臺車、瀑布和雲仙樂園等聞名。
相傳『烏來』一詞原為泰雅族原住民的用語，意思是「溫泉」，所以當地的溫泉也相當有名，泉質為弱鹼性碳酸泉，清徹透明。著名的烏來瀑布，瀑高約80公尺，如白練凌空，聲勢浩大。此外觀光台車亦為烏來的特色之一，原用以運輸林木為主，現為遊客登山遊覽之交通工具，瀑布對面山麓的山地文化村為原住民民俗文物館改建而成，介紹泰雅族原住民文化及風俗習慣，並展示昔日原住民文物，原住民歌舞表演更是文化村內的重頭戲。賞遊烏來，彷如進入世外桃源、人間仙境，是觀光休閒的最佳去處。</string>

    <string name="view8_content">\t\t西子灣位於高雄市西側，壽山西南端山麓下，北瀕萬壽山，南臨旗津半島，為一黃澄碧藍的海水浴場，是一處以夕陽美景及天然礁石聞名的灣澳。距市中心車程約20分鐘，依山臨海，風景宜人，每當夜幕低垂，將大海點綴的瑰麗可人，漁船燈火閃爍其間；西子灣的夕陽是高雄八景之一，海天一色的美景，美不勝收，黃昏時分，常可見一對對情侶在此互道情愫，更有詩情畫意的情境。
中山大學就座落於西子灣風景區內，倚著壽山，傍西子灣，校園內草木蓊鬱、花團錦簇，校舍美輪美奐，是一座美麗的大學。由中山大學左方的旅客服務中心即可進入西子灣海水浴場，夏日總是有成群結隊的遊客到此戲潮、游泳，熱鬧非凡。</string>

    <string name="view9_content">\t\t高美濕地位於清水大甲溪出海口南側，廣達1,500公頃的高美濕地，擁有豐富的天然資源，是國內少數幾處雁鴨集體繁殖區之一。曾在高美濕地棲息的鳥類有多達120餘種，為重要之生態保育區。目前已逐漸取代大肚溪口，成為喜好賞鳥人士的新興賞線。
高美濕地雖然面積不大，但是由於泥質及沙質灘地兼具，加上與河口沼澤地帶鑲嵌在一起，所以孕育了豐富又複雜的濕地生態，以及目前所知全臺灣最大族群的雲林莞草區，形成乾濕相間伴有植物生長的複雜地形，因為地形多變，生態種類亦相當複雜，主要為鳥類、魚類、蟹類及其他無脊椎類等生物。
高美自行車道:\n高美自行車道規劃「河濱生態解說園」、「燈塔博物館」、「生態展售區」、「服務設施區」、「生態解說體驗園」、「濱海生態學習園區」、「電力博物館」等設施，讓遊客可以沿途欣賞優美的風景，另外還能對高美濕地有更深入的了解。
高美自行車是沿著清水大排、海堤至高美溼地，南起濱海橋、北至高美海堤防汛道路，全長1.7公里，車道旁緊鄰清水大排和高美溼地，除了可以鳥瞰整片高美溼地外，同時也是賞鳥、看夕陽的好地方，未來還可眺望西側海岸正在興建的風力發電機組，是個可以讓遊客旅遊休憩的好地方。</string>

    <string name="view10_content">\t\t艋舺（今萬華）是臺北市開發最早的地方，而臺北第一名剎──龍山寺，就是當地居民信仰、活動、集會和指揮的中心。據說以前有一個人把佩帶的觀音菩薩香火袋，遺掛在一棵大榕樹上，到了夜晚竟然發出光芒。更奇怪的是有求必應，非常靈驗。所以信徒就在那個地方建立龍山寺，從西元1738年開始，到西元1740年落成。二百多年來，龍山寺經過多次的修建，整個結構是完整「回」字形，在傳統的寺廟建築中，是一種非常尊貴的佈局。在廣場上，可注意地板石材，其中切割較不整齊的部分，已有古老的歷史。
前臺灣海峽又叫「黑水溝」，風浪很大，移民都用石板來壓穩船艙，以能安全渡海來臺，而這些石板，後來也就用來舖設龍山寺前的部分廣場。再來，就可從前殿開始欣賞。首先，可以看到殿前有西元1918年所製臺灣獨一無二的銅鑄龍柱，屋簷下的木雕、彩繪，也都非常生動。尤其用來支撐屋頂的「網目斗拱」，是臺灣寺廟的首次創作。另外，大門左邊的石雕窗上，雕有精彩的三國演義故事；右面則有一個八角竹節窗，上刻竹幹，是「竹報平安」的意思。由於正門只有節慶祭典時才打開，所以平時都從廟宇左邊的門進入，右邊的門出來。進到廟裡，可看到很多善男信女虔誠祭拜、誦經唸文。出了前殿，在天井上有一個香爐，香爐上「憨番抬廟角」的有趣雕塑。天井兩旁還有鐘樓和鼓樓，早上敲鐘、晚上擊鼓，來作為誦經、法會的提醒。
從石階上正殿，正殿四面有一道走廊，廊上的壁面、石柱都有精巧的石雕作品，值得仔細觀賞。進了正殿，可以看到主神──觀世音菩薩。在第二次世界大戰中，龍山寺正殿曾被炮火擊中，殿堂全毀，但此神像卻絲毫無損，所以讓信徒更加敬拜。來到後殿和左、右翼殿，會看到很多的神佛，有人說「龍山寺是眾神的聚會所」，就是說廟內供奉神佛非常多，號稱主、附神的有一百多尊，這裡可注意後殿殿前的一對人物石柱，造形生動，和一般寺廟以「龍」為題材的石柱不同。此外，左、右殿入口外側的壁面，有「紅毛番吹法螺」的石雕，也和香爐上「憨番抬廟角」有相同的趣味性。
龍山寺不僅典藏許多藝術珍品，而且一年中有多次節慶，都非常熱鬧，不妨前來開開眼界。</string>

    <string name="view11_content">\t\t勝興火車站是西部縱貫鐵路的最高點，站內月台有一座紀念碑，標高402.326公尺，為西部縱貫鐵路中最險峻、自然景觀最特殊的一段。勝興車站整棟建築係以木頭為建材，為一日式虎牙式木造建築，虎牙式設計據說有避邪祈福的作用。
勝興火車站興建於西元1906年，至今已有百餘年的歷史，站內設施有許多日治時代的設備，例如與泰安之間作為列車通行證的「電器站牌」，現已改為中央控制系統，這套設備也就逐漸成為歷史。
民國87年（西元1998年）9月23日晚上9點10分車次167最後一班南下列車停靠後，新舊山線完成切換，舊山線從此畫下完美句點。
現在到勝興車站的遊客卻多了一份緬懷，停駛後列車不再來，反而多了新人拍攝婚紗的懷舊場景，越野車手馳騁的新天地，還有三五成群的遊客走進隧道探險的新風貌。擁有多項第一的勝興站，在各方的關愛下已於民國88年（西元1999年）4月16日經苗栗縣政府公告為「縣定古蹟」，至此深富歷史與觀光資源的文物得以保存。</string>

    <string name="view12_content">\t\t蓮池潭
舊稱蓮花潭，位於高雄市左營區東側，南鄰龜山、北接半屏山，潭面面積約42公頃，源於高屏溪。蓮池潭周邊潭水因遍植荷花，在清領時期就名列鳳山八景，稱「泮水荷香」，現因湖畔半屏山特殊造型與龍虎塔遠近倒映水中，而以「蓮潭夕照」聞名。入夜後的蓮池潭，水霧濛濛，景色若隱若現，予人難以言喻的神秘感。
潭上亭台樓閣林立，潭畔遍植垂柳，景緻秀麗。由南而北風景點分別有舊城、龍虎塔、五里亭、春秋閣、啟明堂、孔廟等，吸引各地遊客前往，假日更是絡繹不絕。
春秋閣:\n春秋閣建於民國42年（西元1953年）為兩座宮殿式樓閣，為春閣及秋閣之合稱，各為四層八角，綠瓦黃牆，宛如寶塔，古色古香的塔影倒映水中，造型為當時全臺灣塔中之翹楚。各有九曲橋相通，又稱「春秋御閣」，係為紀念武聖關公而建。
位在春秋閣的前端有一尊騎龍觀音，關於此一騎龍觀音的由來有一傳說：觀音菩薩曾騎龍在雲端現身，指示信徒要依其現身之形態建造聖像在春閣與秋閣之間，於是有現今的騎龍觀音聖像。
龍虎塔:\n塔高七層，潭水上立有龍虎兩孿生閣樓，樓前各有龍虎塑像，遊客可以身為道，由龍口進，虎口出，取其吉祥之意。塔身與岸邊有九曲橋銜接，巍峨聳立，與潭面相互對應，景緻優美。</string>

    <string name="sview1_1_content">西螺大橋位於濁水溪下游，橫跨雲林西螺及彰化溪州，這座受美援資助的大橋，長1,939.03公尺，寬7.32公尺，採華倫氏穿式橋樑，鋼鐵作架，水泥橋墩，衍樑31孔，橋墩32座，橋墩間隔60餘公尺，昔日為遠東第一大橋，往昔曾附設臺灣糖廠的小鐵道，形成汽車及小火車並行特殊景觀。</string>
    <string name="sview1_2_content">北港朝天宮舊稱天妃廟或天后宮，為了紀念分靈自湄洲的祖廟──朝天閣，才改名為朝天宮。創建於清康熙年間，西元1694年，因神蹟靈驗，已成為全國三百餘座媽祖廟的總廟，外觀輝煌。廟中供祀天上聖母及觀世音菩薩等神像。廟內的樑架結構及木雕皆出自於名匠之手，如廟埕外石欄杆柱上四海龍王之石雕像，每尊姿態各異，氣勢雄...</string>
    <string name="sview1_3_content">台西漁港屬於專業養蚵港，碼頭邊堆滿蚵殼、蚵串，與其他漁港具有不同風味。漁港周邊一大片濕地，蘊藏著豐富的生態，當海水退潮時，許多遊客會前來尋找招潮蟹及彈塗魚的蹤影。漁港海口村巷弄裡，由韓、日、香港、美加、西班牙等國志工繪製五顏六色的彩繪牆，增添許多台西漁港的異國風貌與創作風格。</string>

    <string name="sview2_1_content">阿里山共由18座高山組成，屬於玉山山脈的支脈，隔同富溪與玉山主峰相望，現在新中橫公路已將阿里山與玉山風景區串連起來。日出、雲海、晚霞、森林與高山鐵路，合稱阿里山五奇，而鄒族原住民人文資源更增其觀光魅力。 日出 聞名的阿里山日出四季位置與時間均不同（因地球公轉所致），祝山觀日樓上為最好的觀日點，前...</string>
    <string name="sview2_2_content">隙頂的地標。高度約1,050公尺。從隙頂地區俯瞰下去，仿佛一頭巨象，象頭、象鼻和象背皆栩栩如生。 根據當地人的經驗，早年，只要天氣好時，聽到象山發出轟隆聲，就知道天氣可能要變壞了；反之天氣壞時，聽到轟隆聲，天氣就變好了。這是山上地質的土石鬆動，造成落石容易滾動的結果。如今落石掉落的差不多，就少有這...</string>
    <string name="sview2_3_content">奮起湖位於嘉義縣竹崎鄉中和村，海拔約1,400公尺，因東、西、北三面環山，中間低平，形如畚箕，故舊稱畚箕湖。由於此區位於阿里山森林鐵路之中點，早年以老街、便當和四方竹聞名。同時，它亦成為附近村落趕集聚散之地，因而村落聚集在火車站附近。 奮起湖的房舍依山坡而建，火車站下方有一條五百公尺左右的老街，街...</string>

    <string name="sview3_1_content">文化歷史 九份隸屬新北市瑞芳區，九份在金礦業興盛前，以採樟煮腦為業。此處計有九十口樟腦灶，而十口灶為一份，故共有九份，久而久之演變為九份地名。九份之發展過程可謂一段先民採金史，隨採金人潮的湧入而繁華，又隨採金事業的沒落而褪色。約略西元1890年左右，居民在福山宮土地祠距小金瓜不遠處掘到金脈，村落...</string>
    <string name="sview3_2_content">黃金博物館位於新北市瑞芳區金瓜石的山城裡，擁有豐富的歷史人文與自然資產，並且是臺灣首座以生態博物館為理念所打造而成的博物館，以資產保存為主，強調永續發展及舊建物的再利用，結合在地的力量，進而帶動區域發展。來到金瓜石，除了欣賞當地特殊地質與自然美景外，更能對金瓜石礦業歷史、聚落文化產生深刻的體驗，並且...</string>

    <string name="sview4_1_content">總統府座落在臺北市中正區重慶南路一段122號，正大門面對凱達格蘭大道，正面（東向）重慶南路，背面（西向）博愛路，北向為寶慶路，南向為貴陽街。 日人統治臺灣時期，於西元1906年至1907年間，決定興建總督府廳舍（即現今總統府）。第2次世界大戰末期，這棟建築曾遭到轟炸而嚴重毀損。在民國35年（西元1...</string>
    <string name="sview4_2_content">國立歷史博物館座落在南海路上的植物園內，其建築風格為古典的中式建築。 現有館藏共分為國畫、法書、西畫、玉石、陶器、瓷器等等十九類文物。文物品類包括史前彩陶，商周甲骨青銅器、唐三彩、石刻佛雕、玉器、民初家具戲偶、當代書畫等，文物樣貌多元，古今兼備，並深具民間性與生活性。 （資料來源：國立歷史博物館...</string>
    <string name="sview4_3_content">艋舺（今萬華）是臺北市開發最早的地方，而臺北第一名剎──龍山寺，就是當地居民信仰、活動、集會和指揮的中心。據說以前有一個人把佩帶的觀音菩薩香火袋，遺掛在一棵大榕樹上，到了夜晚竟然發出光芒。更奇怪的是有求必應，非常靈驗。所以信徒就在那個地方建立龍山寺，從西元1738年開始，到西元1740年落成。二百多...</string>
    <string name="sview4_4_content">華西街觀光夜市位於龍山寺附近，是臺灣第一座觀光夜市，以販賣各式山產海鮮野味小吃為大宗，是國內外觀光客最鐘愛的景點之一。 夜市入口處為中國傳統牌樓建築，沿途掛滿紅色宮燈，極具特色，兩旁店家皆為老字號，口碑與品質兼顧，連高級餐廳也有據點，像是廣受日本觀光客青睞的臺南擔仔麵一店，就是在這裡發跡，其他小吃...</string>

    <string name="sview5_1_content">壽山位於高雄市西南區，為南北走向之珊瑚礁質丘陵地，舊稱麒麟山、埋金山、打狗山或打鼓山，是高雄市的天然地標。 壽山是高雄市市內一座容易親近又具豐富自然資源的聖山。為早期平埔族打狗社區原住地。山上林木繁盛，有壽山公園、忠烈祠、動物園、千光寺、法興寺、元亨寺等觀光點，沿著壽山動物園旁的小徑可至壽山風景區...</string>
    <string name="sview5_2_content">高雄市立美術館在民國83年（西元1994年）6月正式開館後，已成為高雄的另一個新觀光重地。這座新美術館，位於鼓山區內惟埤文化園區內，戶外雕塑公園矗立著不同風格的雕塑品。除了長期展出館藏名家書法作品外，每一層都有展覽室，定期展出國際當代藝術品，已展出多場轟動一時的名家作品，吸引數十萬人前往欣賞藝術饗宴...</string>
    <string name="sview5_3_content">沒到過六合夜市，就不算真正去過高雄。 早在民國39年（西元1950年），位於現在高雄市新興區大港埔附近的空地上，就開始聚集了許多小吃攤，漸漸的越來越多，久而久之便形成以小吃聞名的「大港埔夜市」，之後逐漸擴大。轉變成為現在的六合夜市。六合夜市距離高雄火車站不遠，沿著中山路直行約十餘分鐘後右轉至六合路...</string>
    <string name="sview5_4_content">西子灣位於高雄市西側，壽山西南端山麓下，北瀕萬壽山，南臨旗津半島，為一黃澄碧藍的海水浴場，是一處以夕陽美景及天然礁石聞名的灣澳。距市中心車程約20分鐘，依山臨海，風景宜人，每當夜幕低垂，將大海點綴的瑰麗可人，漁船燈火閃爍其間；西子灣的夕陽是高雄八景之一，海天一色的美景，美不勝收，黃昏時分，常可見一對...</string>
    <string name="sview5_5_content">建於西元1865年，至今已有150多年歷史，地理位置特殊，座落在海天一色的西子灣山上，可屬美景天成。坐靠打鼓山、前扼高雄港進出之大船、右看西子灣日落、左抱高雄港全景。 本館為後文藝復興時代巴洛克式建築風格，花欄石雕、圓拱設計，她見證了一個半世紀的歷史，經整修後，風華再現，英領風騷；館內亦蘊藏豐富的...</string>
    <string name="sview5_6_content">民國5、60年代，當時的攤販大都聚集在高雄市四維路的天華戲院附近，由於地主要求收回空地，攤販群遷移至興中路、文橫路附近，民國80幾年因為鄰近的新光三越百貨、SOGO百貨相繼開幕，聚集了許多逛街的人潮，三多商圈逐漸成型，養成大家到這裡用餐、買飲料的習慣。 目前高雄市政府為讓三多商圈的完善性，積極推動...</string>

    <string name="sview_content"></string>


</resources>